# Artificial-Intelligence

./: README.md
problem_sets/: pset0.odt
projects/project0/1-tictactoe/: submission.json  test.board
projects/project0/1-tictactoe/src/: tictac_turnin.cc
projects/project1/Proj1/Spam/: CMakeLists.txt  SpamTestForClassify.csv  submission.json
projects/project1/src/: classify.cc  training.cc
projects/project2/: kf.py  sim.py
projects/project3/: car.py  cart.py
